fixed pdf report generation